// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IstioComponentStatus renders error icon when core component is not found 1`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fqzjpeg kiali_f1mvcfqu"
        >
          <ExclamationCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--danger--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--danger--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not found
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders error icon when core component is not running 1`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fqzjpeg kiali_f1mvcfqu"
        >
          <ExclamationCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--danger--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--danger--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders minus icon when addon component is not ready 1`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-addon"
  >
    <SplitItem
      isFilled={true}
    >
      addon
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f49xmp9 kiali_f1ageo3n"
        >
          <InProgressIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--info--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--info--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not ready
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders minus icon when core component is not ready 1`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-core"
  >
    <SplitItem
      isFilled={true}
    >
      core
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f49xmp9 kiali_f1ageo3n"
        >
          <InProgressIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--info--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--info--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not ready
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders success icon when core component is running 1`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fngrjuo kiali_f6kk0cu"
        >
          <CheckCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--success--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--success--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders success icon when core component is running 2`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fngrjuo kiali_f6kk0cu"
        >
          <CheckCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--success--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--success--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders warning icon when core component is not found 1`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f3dfrvt kiali_f1wuzvd3"
        >
          <ExclamationTriangleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--warning--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--warning--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not found
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders warning icon when core component is not running 1`] = `
<Fragment>
  <Split
    className="kiali_f1km8g7f"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_f1ha75wd"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f3dfrvt kiali_f1wuzvd3"
        >
          <ExclamationTriangleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--status--warning--default)",
          "borderColor": "var(--pf-t--global--icon--color--status--warning--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not healthy
    </Label>
  </Split>
</Fragment>
`;
